; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_interface.c_rtc_read_alarm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_interface.c_rtc_read_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc_device = type { i32 }
%struct.rtc_wkalrm = type { %struct.rtc_time, i32 }
%struct.rtc_time = type { i64, i64, i64, i64, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"alarm rollover: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"day\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"month\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"year\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"alarm rollover not handled\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtc_read_alarm(%struct.rtc_device* %0, %struct.rtc_wkalrm* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rtc_device*, align 8
  %5 = alloca %struct.rtc_wkalrm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.rtc_time, align 8
  %8 = alloca %struct.rtc_time, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.rtc_device* %0, %struct.rtc_device** %4, align 8
  store %struct.rtc_wkalrm* %1, %struct.rtc_wkalrm** %5, align 8
  store i32 1, i32* %9, align 4
  store i32 0, i32* %12, align 4
  %14 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %15 = call i32 @rtc_read_time(%struct.rtc_device* %14, %struct.rtc_time* %7)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  store i32 %19, i32* %3, align 4
  br label %247

20:                                               ; preds = %2
  br label %21

21:                                               ; preds = %78, %20
  %22 = load i32, i32* %9, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %21
  %25 = call i32 @memcpy(%struct.rtc_time* %7, %struct.rtc_time* %8, i32 40)
  br label %26

26:                                               ; preds = %24, %21
  store i32 0, i32* %9, align 4
  %27 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %28 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %29 = call i32 @rtc_read_alarm_internal(%struct.rtc_device* %27, %struct.rtc_wkalrm* %28)
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %3, align 4
  br label %247

34:                                               ; preds = %26
  %35 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %36 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %34
  store i32 0, i32* %3, align 4
  br label %247

40:                                               ; preds = %34
  %41 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %42 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %41, i32 0, i32 0
  %43 = call i64 @rtc_valid_tm(%struct.rtc_time* %42)
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %40
  store i32 0, i32* %3, align 4
  br label %247

46:                                               ; preds = %40
  %47 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %48 = call i32 @rtc_read_time(%struct.rtc_device* %47, %struct.rtc_time* %8)
  store i32 %48, i32* %6, align 4
  %49 = load i32, i32* %6, align 4
  %50 = icmp slt i32 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %46
  %52 = load i32, i32* %6, align 4
  store i32 %52, i32* %3, align 4
  br label %247

53:                                               ; preds = %46
  br label %54

54:                                               ; preds = %53
  %55 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %7, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = icmp ne i64 %56, %58
  br i1 %59, label %78, label %60

60:                                               ; preds = %54
  %61 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %7, i32 0, i32 1
  %62 = load i64, i64* %61, align 8
  %63 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 1
  %64 = load i64, i64* %63, align 8
  %65 = icmp ne i64 %62, %64
  br i1 %65, label %78, label %66

66:                                               ; preds = %60
  %67 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %7, i32 0, i32 2
  %68 = load i64, i64* %67, align 8
  %69 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 2
  %70 = load i64, i64* %69, align 8
  %71 = icmp ne i64 %68, %70
  br i1 %71, label %78, label %72

72:                                               ; preds = %66
  %73 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %7, i32 0, i32 3
  %74 = load i64, i64* %73, align 8
  %75 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 3
  %76 = load i64, i64* %75, align 8
  %77 = icmp ne i64 %74, %76
  br label %78

78:                                               ; preds = %72, %66, %60, %54
  %79 = phi i1 [ true, %66 ], [ true, %60 ], [ true, %54 ], [ %77, %72 ]
  br i1 %79, label %21, label %80

80:                                               ; preds = %78
  %81 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %82 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %81, i32 0, i32 0
  %83 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %82, i32 0, i32 4
  %84 = load i32, i32* %83, align 8
  %85 = icmp eq i32 %84, -1
  br i1 %85, label %86, label %92

86:                                               ; preds = %80
  %87 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 4
  %88 = load i32, i32* %87, align 8
  %89 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %90 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %89, i32 0, i32 0
  %91 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %90, i32 0, i32 4
  store i32 %88, i32* %91, align 8
  br label %92

92:                                               ; preds = %86, %80
  %93 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %94 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %93, i32 0, i32 0
  %95 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %94, i32 0, i32 0
  %96 = load i64, i64* %95, align 8
  %97 = icmp eq i64 %96, -1
  br i1 %97, label %98, label %104

98:                                               ; preds = %92
  %99 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 0
  %100 = load i64, i64* %99, align 8
  %101 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %102 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %101, i32 0, i32 0
  %103 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %102, i32 0, i32 0
  store i64 %100, i64* %103, align 8
  br label %104

104:                                              ; preds = %98, %92
  %105 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %106 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %105, i32 0, i32 0
  %107 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %106, i32 0, i32 1
  %108 = load i64, i64* %107, align 8
  %109 = icmp eq i64 %108, -1
  br i1 %109, label %110, label %116

110:                                              ; preds = %104
  %111 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 1
  %112 = load i64, i64* %111, align 8
  %113 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %114 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %113, i32 0, i32 0
  %115 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %114, i32 0, i32 1
  store i64 %112, i64* %115, align 8
  br label %116

116:                                              ; preds = %110, %104
  %117 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %118 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %117, i32 0, i32 0
  %119 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %118, i32 0, i32 5
  %120 = load i32, i32* %119, align 4
  %121 = icmp eq i32 %120, -1
  br i1 %121, label %122, label %128

122:                                              ; preds = %116
  %123 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 5
  %124 = load i32, i32* %123, align 4
  %125 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %126 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %125, i32 0, i32 0
  %127 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %126, i32 0, i32 5
  store i32 %124, i32* %127, align 4
  store i32 1, i32* %12, align 4
  br label %128

128:                                              ; preds = %122, %116
  %129 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %130 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %129, i32 0, i32 0
  %131 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %130, i32 0, i32 2
  %132 = load i64, i64* %131, align 8
  %133 = icmp eq i64 %132, -1
  br i1 %133, label %134, label %144

134:                                              ; preds = %128
  %135 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 2
  %136 = load i64, i64* %135, align 8
  %137 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %138 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %137, i32 0, i32 0
  %139 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %138, i32 0, i32 2
  store i64 %136, i64* %139, align 8
  %140 = load i32, i32* %12, align 4
  %141 = icmp eq i32 %140, 0
  br i1 %141, label %142, label %143

142:                                              ; preds = %134
  store i32 2, i32* %12, align 4
  br label %143

143:                                              ; preds = %142, %134
  br label %144

144:                                              ; preds = %143, %128
  %145 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %146 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %145, i32 0, i32 0
  %147 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %146, i32 0, i32 3
  %148 = load i64, i64* %147, align 8
  %149 = icmp eq i64 %148, -1
  br i1 %149, label %150, label %160

150:                                              ; preds = %144
  %151 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %8, i32 0, i32 3
  %152 = load i64, i64* %151, align 8
  %153 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %154 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %153, i32 0, i32 0
  %155 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %154, i32 0, i32 3
  store i64 %152, i64* %155, align 8
  %156 = load i32, i32* %12, align 4
  %157 = icmp eq i32 %156, 0
  br i1 %157, label %158, label %159

158:                                              ; preds = %150
  store i32 3, i32* %12, align 4
  br label %159

159:                                              ; preds = %158, %150
  br label %160

160:                                              ; preds = %159, %144
  %161 = call i32 @rtc_tm_to_time(%struct.rtc_time* %8, i64* %10)
  %162 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %163 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %162, i32 0, i32 0
  %164 = call i32 @rtc_tm_to_time(%struct.rtc_time* %163, i64* %11)
  %165 = load i64, i64* %10, align 8
  %166 = load i64, i64* %11, align 8
  %167 = icmp ult i64 %165, %166
  br i1 %167, label %168, label %169

168:                                              ; preds = %160
  br label %246

169:                                              ; preds = %160
  %170 = load i32, i32* %12, align 4
  switch i32 %170, label %241 [
    i32 1, label %171
    i32 2, label %181
    i32 3, label %225
  ]

171:                                              ; preds = %169
  %172 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %173 = getelementptr inbounds %struct.rtc_device, %struct.rtc_device* %172, i32 0, i32 0
  %174 = call i32 @dev_dbg(i32* %173, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %175 = load i64, i64* %11, align 8
  %176 = add i64 %175, 86400
  store i64 %176, i64* %11, align 8
  %177 = load i64, i64* %11, align 8
  %178 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %179 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %178, i32 0, i32 0
  %180 = call i32 @rtc_time_to_tm(i64 %177, %struct.rtc_time* %179)
  br label %245

181:                                              ; preds = %169
  %182 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %183 = getelementptr inbounds %struct.rtc_device, %struct.rtc_device* %182, i32 0, i32 0
  %184 = call i32 @dev_dbg(i32* %183, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %185

185:                                              ; preds = %217, %181
  %186 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %187 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %186, i32 0, i32 0
  %188 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %187, i32 0, i32 2
  %189 = load i64, i64* %188, align 8
  %190 = icmp slt i64 %189, 11
  br i1 %190, label %191, label %197

191:                                              ; preds = %185
  %192 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %193 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %192, i32 0, i32 0
  %194 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %193, i32 0, i32 2
  %195 = load i64, i64* %194, align 8
  %196 = add nsw i64 %195, 1
  store i64 %196, i64* %194, align 8
  br label %206

197:                                              ; preds = %185
  %198 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %199 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %198, i32 0, i32 0
  %200 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %199, i32 0, i32 2
  store i64 0, i64* %200, align 8
  %201 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %202 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %201, i32 0, i32 0
  %203 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %202, i32 0, i32 3
  %204 = load i64, i64* %203, align 8
  %205 = add nsw i64 %204, 1
  store i64 %205, i64* %203, align 8
  br label %206

206:                                              ; preds = %197, %191
  %207 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %208 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %207, i32 0, i32 0
  %209 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %208, i32 0, i32 2
  %210 = load i64, i64* %209, align 8
  %211 = trunc i64 %210 to i32
  %212 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %213 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %212, i32 0, i32 0
  %214 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %213, i32 0, i32 3
  %215 = load i64, i64* %214, align 8
  %216 = call i32 @rtc_month_days(i32 %211, i64 %215)
  store i32 %216, i32* %13, align 4
  br label %217

217:                                              ; preds = %206
  %218 = load i32, i32* %13, align 4
  %219 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %220 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %219, i32 0, i32 0
  %221 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %220, i32 0, i32 5
  %222 = load i32, i32* %221, align 4
  %223 = icmp ult i32 %218, %222
  br i1 %223, label %185, label %224

224:                                              ; preds = %217
  br label %245

225:                                              ; preds = %169
  %226 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %227 = getelementptr inbounds %struct.rtc_device, %struct.rtc_device* %226, i32 0, i32 0
  %228 = call i32 @dev_dbg(i32* %227, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  br label %229

229:                                              ; preds = %235, %225
  %230 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %231 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %230, i32 0, i32 0
  %232 = getelementptr inbounds %struct.rtc_time, %struct.rtc_time* %231, i32 0, i32 3
  %233 = load i64, i64* %232, align 8
  %234 = add nsw i64 %233, 1
  store i64 %234, i64* %232, align 8
  br label %235

235:                                              ; preds = %229
  %236 = load %struct.rtc_wkalrm*, %struct.rtc_wkalrm** %5, align 8
  %237 = getelementptr inbounds %struct.rtc_wkalrm, %struct.rtc_wkalrm* %236, i32 0, i32 0
  %238 = call i64 @rtc_valid_tm(%struct.rtc_time* %237)
  %239 = icmp ne i64 %238, 0
  br i1 %239, label %229, label %240

240:                                              ; preds = %235
  br label %245

241:                                              ; preds = %169
  %242 = load %struct.rtc_device*, %struct.rtc_device** %4, align 8
  %243 = getelementptr inbounds %struct.rtc_device, %struct.rtc_device* %242, i32 0, i32 0
  %244 = call i32 @dev_warn(i32* %243, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0))
  br label %245

245:                                              ; preds = %241, %240, %224, %171
  br label %246

246:                                              ; preds = %245, %168
  store i32 0, i32* %3, align 4
  br label %247

247:                                              ; preds = %246, %51, %45, %39, %32, %18
  %248 = load i32, i32* %3, align 4
  ret i32 %248
}

declare dso_local i32 @rtc_read_time(%struct.rtc_device*, %struct.rtc_time*) #1

declare dso_local i32 @memcpy(%struct.rtc_time*, %struct.rtc_time*, i32) #1

declare dso_local i32 @rtc_read_alarm_internal(%struct.rtc_device*, %struct.rtc_wkalrm*) #1

declare dso_local i64 @rtc_valid_tm(%struct.rtc_time*) #1

declare dso_local i32 @rtc_tm_to_time(%struct.rtc_time*, i64*) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i8*) #1

declare dso_local i32 @rtc_time_to_tm(i64, %struct.rtc_time*) #1

declare dso_local i32 @rtc_month_days(i32, i64) #1

declare dso_local i32 @dev_warn(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
